# bankpulse

./: .claudeignore  .dockerignore  .env.example  .gitignore  ARCHITECTURE_BACKEND.md  ARCHITECTURE_FRONTEND.md  CLAUDE.md  Dockerfile  ETAPE_5_API_EXAMPLES.md  ETAPE_5_TECHNICAL_NOTES.md  PLAN_ETAPE_5.md  README.md  SPEC.md  SPEC_BACKEND.md  SPEC_MVP.md  SPEC_UI.md  SPEC_UI_LAYOUT.md  SPEC_UI_PAGES.md  UPLOAD_INSTRUCTIONS.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  skills-lock.json  start.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 11ad90472e66_add_password_reset_tokens.py  8ffc6c2b8a87_initial_schema.py  a1b2c3d4e5f6_add_account_shares.py  b3e9f1a2c456_add_import_hash_to_transactions.py  (+1 more)
api/: deps.py  router.py
core/: config.py  database.py  security.py
docs/: truncate_db.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  proxy.ts
model/: models.py
parsers/: base.py  boursorama.py
schemas/: accounts.py  auth.py  budgets.py  categories.py  dashboard.py  import_.py  shares.py  tags.py  transaction_filters.py  transactions.py
scripts/: extract_labels.py  generate_rules.py  json_to_csv.py
services/: account_share_service.py  budget_service.py  categorization_service.py  dashboard_service.py  email_service.py  import_service.py
tests/: conftest.py  test_accounts.py  test_auth.py  test_boursorama_parser.py  test_budgets_api.py  test_categories.py  test_dashboard_api.py  test_dashboard_service.py  test_health.py  test_import_api.py  test_shares.py  test_tags.py  test_transactions.py
(+94 files in other folders)
